<resources>
    <string name="app_name">UpToDate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UpToDate</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="india_today">India Today</string>
    <string name="ndtv">NDTV</string>
    <string name="zee_news">Zee News</string>
    <string name="the_hindu">The Hindu</string>
    <string name="the_economic_times">The Economic Times</string>
    <string name="times_of_india">Times Of India</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="mint">Mint</string>
    <string name="indian_express">Indian Express</string>
    <string name="one_india">One India</string>
    <string name="dna">DNA</string>
    <string name="news18">News18</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hindustan_times">Hindustan Times</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>